[workspace]
members = ["ctypes", "macros", "macros-core"]

[package]
name = "drone-core"
version = "0.12.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/drone-core"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-core/0.12/drone_core/"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "async",
    "real-time",
    "bare-metal",
    "rtos",
    "firmware",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "os",
]
description = """
The core crate for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["futures/std"]
heaptrace = []

[dependencies.drone-ctypes]
version = "=0.12.0"
path = "ctypes"

[dependencies.drone-core-macros]
version = "=0.12.0"
path = "macros"

[dependencies]
futures = { version = "0.3.0", default-features = false }
