[workspace]
members = ["macros", "macros-core"]

[workspace.package]
version = "0.15.0"
authors = ["Valentyn Valiaiev <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone-core"
homepage = "https://www.drone-os.com/"
license = "MIT OR Apache-2.0"

[workspace.dependencies.drone-core-macros]
version = "=0.15.0"
path = "macros"

[workspace.dependencies.drone-macros-core]
version = "=0.15.0"
path = "macros-core"

[workspace.dependencies.drone-stream]
version = "0.15.0"
path = "../drone/stream"

[workspace.dependencies.drone-config]
version = "0.15.0"
path = "../drone/config"

[workspace.dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"

[package]
name = "drone-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-core/0.15/drone_core/"
readme = "README.md"
keywords = [
    "async",
    "real-time",
    "bare-metal",
    "rtos",
    "firmware",
]
categories = [
    "embedded",
    "asynchronous",
    "concurrency",
    "no-std",
    "os",
]
description = """
The core crate for Drone, an Embedded Operating System.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
std = ["futures/std"]
atomics = []

[dependencies]
drone-core-macros.workspace = true
drone-stream.workspace = true
futures = { version = "0.3.24", default-features = false, features = ["alloc", "async-await"] }
typenum = "1.15.0"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5.6", features = ["checkpoint"] }
