[package]
name = "drone-ctypes"
version = "0.10.1"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
repository = "https://github.com/drone-os/drone-core"
homepage = "https://www.drone-os.com/"
license = "MIT OR Apache-2.0"
description = """
Platform-specific C types for Drone apps.
"""
