[package]
name = "drone-ctypes"
version = "0.14.2"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-core"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-core/0.14/drone_ctypes/"
license = "MIT OR Apache-2.0"
description = """
Platform-specific C types for Drone apps.
"""
