[package]
name = "drone-core"
version = "0.1.1"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = """
Drone Hardware Independent Layer.
"""
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/valff/drone"

[dependencies]
clippy = {version = "0.0", optional = true}

[dev-dependencies]

[dev-dependencies.drone-test]
path = "../drone-test"
features = ["panic_item"]
version = "0.1.1"

[features]
default = []

[lib]
