[package]
name = "drone-stm32f1"
version = "0.1.2"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = """
Drone implementation for STM32F1 microcontroller series.
"""
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/valff/drone"

[dependencies]
clippy = {version = "0.0", optional = true}

[dependencies.drone-core]
path = "../drone-core"
version = "0.1.2"

[dev-dependencies]

[dev-dependencies.drone-test]
path = "../drone-test"
features = ["panic_item"]
version = "0.1.2"

[features]
default = []

[lib]
