[package]
name = "drone-test"
version = "0.1.2"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = """
Drone support crate for rustc's built in unit-test and micro-benchmarking
framework.
"""
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/valff/drone"

[dependencies]
sc = "0.2"
clippy = {version = "0.0", optional = true}

[features]
panic_item = []
default = []

[lib]
