[package]
name = "drone-core-macros"
version = "0.14.3"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-core"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-core/0.14/drone_core_macros/"
license = "MIT OR Apache-2.0"
description = """
Procedural macros for drone-core.
"""

[lib]
proc-macro = true

[dependencies.drone-macros-core]
version = "=0.14.3"
path = "../macros-core"

[dependencies.drone-config]
version = "0.14.0"
path = "../../drone/config"

[dependencies]
Inflector = "0.11"
if_chain = "1"
proc-macro2 = "1"
quote = "1"
syn = "1"
