[package]
name = "drone-core-macros"
version = "0.15.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2021"
repository = "https://github.com/drone-os/drone-core"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-core/0.15/drone_core_macros/"
license = "MIT OR Apache-2.0"
description = """
Procedural macros for drone-core.
"""

[lib]
proc-macro = true

[dependencies.drone-macros-core]
version = "=0.15.0"
path = "../macros-core"

[dependencies.drone-config]
version = "0.15.0"
path = "../../drone/config"

[dependencies]
Inflector = "0.11.4"
if_chain = "1.0.2"
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = "1.0.99"
