[package]
name = "drone-core-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
documentation = "https://api.drone-os.com/drone-core/0.15/drone_core_macros/"
description = """
Procedural macros for drone-core.
"""

[lib]
proc-macro = true

[dependencies]
drone-config.workspace = true
drone-macros-core.workspace = true
heck = "0.4.0"
if_chain = "1.0.2"
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
