[package]
name = "drone-macros2-core"
version = "0.8.0" # remember to update html_root_url
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Drone procedural macros shared lib."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-core"

[dependencies]
proc-macro2 = { version = "0.2", features = ["nightly"] }
syn = "0.12"

[dependencies.clippy]
version = "0.0"
optional = true
