[package]
name = "drone-core-macros2"
version = "0.8.0" # remember to update html_root_url
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
description = "Drone procedural macros."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/drone-os/drone-core"

[lib]
proc-macro = true

[dependencies]
if_chain = "0.1"
proc-macro2 = { version = "0.2", features = ["nightly"] }
quote = "0.4"
syn = "0.12"

[dependencies.drone-macros2-core]
version = "0.8"
path = "../macros2-core"

[dependencies.clippy]
version = "0.0"
optional = true
